saving some configs

--- a/home_dash/proxy.conf
+++ b/home_dash/proxy.conf
@@ -5,7 +5,7 @@ LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule proxy_html_module modules/mod_proxy_html.so
 
-
+#------------------------------------------------------------------------------
 
 # proxy for ubooquity internal port
 ProxyRequests Off
@@ -26,3 +26,77 @@ ProxyPassReverse /bitwarden http://127.0.0.1:8001/
 ProxyRequests Off
 ProxyPass /dashboard http://127.0.0.1:5252/
 ProxyPassReverse /dashboard http://127.0.0.1:5252/
+
+#------------------------------------------------------------------------------
+
+# apache2 location for ubooquity
+<Location /ubooquity>
+    ProxyPassReverse /ubooquity http://127.0.0.1:2039/
+    ProxyPass /ubooquity http://127.0.0.1:2039/
+    ProxyRequests Off
+</Location>
+
+# apache2 location for ubooquity-admin
+<Location /ubooquity-admin>
+    ProxyPassReverse /ubooquity-admin http://127.0.0.1:2038/admin
+    ProxyPass /ubooquity-admin http://127.0.0.1:2038/admin
+    ProxyRequests Off
+</Location>
+
+# apache2 location for bitwarden
+<Location /bitwarden>
+    ProxyPassReverse /bitwarden http://127.0.0.1:8001/
+    ProxyPass /bitwarden http://127.0.0.1:8001/
+    ProxyRequests Off
+</Location>
+
+# apache2 location for dashboard
+<Location /dashboard>
+    ProxyPassReverse /dashboard http://127.0.0.1:5252/
+    ProxyPass /dashboard http://127.0.0.1:5252/
+    ProxyRequests Off
+</Location>
+
+#------------------------------------------------------------------------------
+
+#apache2 reverse proxy for ubooquity
+<VirtualHost *:2039>
+    ServerName ubooquity
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/ubooquity
+    ErrorLog ${APACHE_LOG_DIR}/ubooquity-error.log
+    CustomLog ${APACHE_LOG_DIR}/ubooquity-access.log combined
+</VirtualHost>
+
+
+#apache2 reverse proxy for ubooquity-admin
+<VirtualHost *:2038>
+    ServerName ubooquity-admin
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/ubooquity-admin
+    ErrorLog ${APACHE_LOG_DIR}/ubooquity-admin-error.log
+    CustomLog ${APACHE_LOG_DIR}/ubooquity-admin-access.log combined
+</VirtualHost>
+
+
+#apache2 reverse proxy for bitwarden
+<VirtualHost *:8001>
+    ServerName bitwarden
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/bitwarden
+    ErrorLog ${APACHE_LOG_DIR}/bitwarden-error.log
+    CustomLog ${APACHE_LOG_DIR}/bitwarden-access.log combined
+</VirtualHost>
+
+
+#apache2 reverse proxy for dashboard
+<VirtualHost *:5252>
+    ServerName dashboard
+    ServerAdmin webmaster@localhost
+    DocumentRoot /var/www/dashboard
+    ErrorLog ${APACHE_LOG_DIR}/dashboard-error.log
+    CustomLog ${APACHE_LOG_DIR}/dashboard-access.log combined
+</VirtualHost>
+
+
+#------------------------------------------------------------------------------
