--- a/home_dash/proxy.conf
+++ b/home_dash/proxy.conf
@@ -99,4 +99,16 @@ ProxyPassReverse /dashboard http://127.0.0.1:5252/
 </VirtualHost>
 
 
-#------------------------------------------------------------------------------
+#--------------------------------- HEADERS ----------------------------------
+
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Authorization"
+Header set Access-Control-Allow-Credentials "true"
+Header set Access-Control-Max-Age "1728000"
+Header set Access-Control-Expose-Headers "Content-Length"
+
+
+
+
+
