added module to test

--- a/home_dash/proxy.conf
+++ b/home_dash/proxy.conf
@@ -4,6 +4,8 @@
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
 LoadModule proxy_html_module modules/mod_proxy_html.so
+#rewrite modules
+LoadModule rewrite_module modules/mod_rewrite.so
 
 #------------------------------------------------------------------------------
 
