added more services, fixed some reverse proxys

--- a/home_dash/proxy.conf
+++ b/home_dash/proxy.conf
@@ -109,6 +109,12 @@ Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type,
 Header set Access-Control-Allow-Credentials "true"
 Header set Access-Control-Max-Age "1728000"
 Header set Access-Control-Expose-Headers "Content-Length"
+#x-content type headers
+Header set X-Content-Type-Options "nosniff"
+Header set X-XSS-Protection "1; mode=block"
+Header set X-Frame-Options "SAMEORIGIN"
+Header set X-Content-Security-Policy "default-src 'self'"
+Header set X-WebKit-CSP "default-src 'self'"
 
 
 
